log

Thu 14 Mar 2024 02:42:27 PM UTC: 
 exercises.c | 32 ++++++++++++++++++++++++++++----
 1 file changed, 28 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:27:8: error: ‘i’ undeclared (first use in this function)
   27 |   for (i = size ; i >= 0; i--) {
      |        ^
exercises.c:27:8: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:26:7: error: variable ‘revArr’ set but not used [-Werror=unused-but-set-variable]
   26 |   int revArr[size];
      |       ^~~~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:42:3: error: ‘j’ undeclared (first use in this function); did you mean ‘jn’?
   42 |   j = 0;
      |   ^
      |   jn
exercises.c:43:8: error: ‘i’ undeclared (first use in this function)
   43 |   for (i = 0 ; i < size; i++) {
      |        ^
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:60:21: error: unused variable ‘k’ [-Werror=unused-variable]
   60 |   int i = 0, j = 0, k = 0;
      |                     ^
exercises.c:60:14: error: unused variable ‘j’ [-Werror=unused-variable]
   60 |   int i = 0, j = 0, k = 0;
      |              ^
exercises.c:60:7: error: unused variable ‘i’ [-Werror=unused-variable]
   60 |   int i = 0, j = 0, k = 0;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
dc1fe21
Thu 14 Mar 2024 02:42:42 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:27:8: error: ‘i’ undeclared (first use in this function)
   27 |   for (i = size ; i >= 0; i--) {
      |        ^
exercises.c:27:8: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:26:7: error: variable ‘revArr’ set but not used [-Werror=unused-but-set-variable]
   26 |   int revArr[size];
      |       ^~~~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:42:3: error: ‘j’ undeclared (first use in this function); did you mean ‘jn’?
   42 |   j = 0;
      |   ^
      |   jn
exercises.c:43:8: error: ‘i’ undeclared (first use in this function)
   43 |   for (i = 0 ; i < size; i++) {
      |        ^
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:60:21: error: unused variable ‘k’ [-Werror=unused-variable]
   60 |   int i = 0, j = 0, k = 0;
      |                     ^
exercises.c:60:14: error: unused variable ‘j’ [-Werror=unused-variable]
   60 |   int i = 0, j = 0, k = 0;
      |              ^
exercises.c:60:7: error: unused variable ‘i’ [-Werror=unused-variable]
   60 |   int i = 0, j = 0, k = 0;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
0368df2
Thu 14 Mar 2024 02:43:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:26:7: error: variable ‘revArr’ set but not used [-Werror=unused-but-set-variable]
   26 |   int revArr[size];
      |       ^~~~~~
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:42:3: error: ‘j’ undeclared (first use in this function); did you mean ‘jn’?
   42 |   j = 0;
      |   ^
      |   jn
exercises.c:42:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:43:8: error: ‘i’ undeclared (first use in this function)
   43 |   for (i = 0 ; i < size; i++) {
      |        ^
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:60:21: error: unused variable ‘k’ [-Werror=unused-variable]
   60 |   int i = 0, j = 0, k = 0;
      |                     ^
exercises.c:60:14: error: unused variable ‘j’ [-Werror=unused-variable]
   60 |   int i = 0, j = 0, k = 0;
      |              ^
exercises.c:60:7: error: unused variable ‘i’ [-Werror=unused-variable]
   60 |   int i = 0, j = 0, k = 0;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
09c5a81
Thu 14 Mar 2024 02:47:59 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:1:
exercises.c:34:1: error: expected identifier or ‘(’ before ‘}’ token
   34 | }
      | ^
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:46:3: error: ‘j’ undeclared (first use in this function); did you mean ‘jn’?
   46 |   j = 0;
      |   ^
      |   jn
exercises.c:46:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:47:8: error: ‘i’ undeclared (first use in this function)
   47 |   for (i = 0 ; i < size; i++) {
      |        ^
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:64:21: error: unused variable ‘k’ [-Werror=unused-variable]
   64 |   int i = 0, j = 0, k = 0;
      |                     ^
exercises.c:64:14: error: unused variable ‘j’ [-Werror=unused-variable]
   64 |   int i = 0, j = 0, k = 0;
      |              ^
exercises.c:64:7: error: unused variable ‘i’ [-Werror=unused-variable]
   64 |   int i = 0, j = 0, k = 0;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
aba4cf0
Thu 14 Mar 2024 02:48:29 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:46:3: error: ‘j’ undeclared (first use in this function); did you mean ‘jn’?
   46 |   j = 0;
      |   ^
      |   jn
exercises.c:46:3: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:47:8: error: ‘i’ undeclared (first use in this function)
   47 |   for (i = 0 ; i < size; i++) {
      |        ^
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:64:21: error: unused variable ‘k’ [-Werror=unused-variable]
   64 |   int i = 0, j = 0, k = 0;
      |                     ^
exercises.c:64:14: error: unused variable ‘j’ [-Werror=unused-variable]
   64 |   int i = 0, j = 0, k = 0;
      |              ^
exercises.c:64:7: error: unused variable ‘i’ [-Werror=unused-variable]
   64 |   int i = 0, j = 0, k = 0;
      |       ^
cc1: all warnings being treated as errors
Compilation failed
7305061
